--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
 		"issues": "https://github.com/axllent/silverstripe-gridfield-paginator-header/issues"
 	},
 	"require": {
-		"silverstripe/framework": "3.*"
+		"silverstripe/cms": "3.*"
 	}
 }
